package carteAnimal;

import typeCarte.Animal;

public class Coyote extends Animal {
    public Coyote(){
        super("Coyote", 2, 1, 0, 4, false);
    }
}
