package carteAnimal;

import typeCarte.Animal;

public class Grizzly extends Animal {
    public Grizzly(){
        super("Grizzly", 4, 6, 3, 0, false);
    }
}
