package carteAnimal;

import typeCarte.Animal;

public class Hermine extends Animal{
    public Hermine(){
        super("Hermine", 1, 3, 1, 0, false);
    }
}
