package obstacles;

import typeCarte.Obstacle;

public class Sapin extends Obstacle {
    public Sapin(){
        super(3, "sapin");
    }
}
