@startuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members
class Main{
  +{static} main(args: String[*])
}

Main .> typeCarte.Animal : <<instantiate>>
package typeCarte{
    abstract class Carte{
        - m_nom : String
        - m_pointAttaque : Integer
        - m_pointDeVie : Integer
        - m_gouttesDeSang : Integer
        - m_os : Integer
        - m_volant : Boolean
        + <<Create>> Carte(nom : String, PV : Integer)
        + <<Create>> Carte(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
        + attaquer(other : Animal)
        + getNom() : String
        + getPV() : Integer
        + getAttaque() : Integer
        + getGouttesSang() : Integer
        + getOs() : Integer
    }
    class Animal extends Carte{
        +<<Create>> Animal(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }

    class Obstacle extends Carte{
        + <<Create>> Obstacle(PV : Integer, nom : String)
    }
}

package obstacle{
    class Roche extends typeCarte.Obstacle{
        + <<Create>> Roche(PV : Integer, nom : String)
    }

    class Sapin extends typeCarte.Obstacle{
        + <<Create>> Sapin(PV : Integer, nom : String)
    }
}

package carteAnimal{
    class Chat extends typeCarte.Animal{
        + <<Create>> Chat(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Corbeau extends typeCarte.Animal {
        + <<Create>> Corbeau(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Coyote extends typeCarte.Animal{
        + <<Create>> Coyote(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Ecureuil extends typeCarte.Animal{
        + <<Create>> Ecureuil(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Grizzly extends typeCarte.Animal{
        + <<Create>> Grizzly(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Hermine extends typeCarte.Animal{
        + <<Create>> Hermine(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Loup extends typeCarte.Animal{
        + <<Create>> Loup(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Louveteau extends typeCarte.Animal{
        + <<Create>> Louveteau(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Moineau extends typeCarte.Animal{
        + <<Create>> Moineau(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
    class Punaise extends typeCarte.Animal{
        + <<Create>> Punaise(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
    }
}

package gameplay{
    package jeu{

        class Jeu {
            + <<Create>> Jeu()
            + demarrerJeuSansObstacle()
            + demarrerJeuAvecObstacle()
        }

        Jeu .> Partie : <<use>>
        class Partie{
            +<<Create>> Partie()
            + demarrerPartieSansObstacle()
            + demarrerPartieAvecObstacle()
            + ToString() : String
        }

        class Joueur{
            - m_scoreJoueur : Integer
            - m_os : Integer
            +<<Create>> Joueur()
            + getScoreJoueur() : Integer
            + getPlateau()
            + getMain()
            + getOs() : Integer
            + afficherCarte()
            + afficherMain()
            + piocher()
            + getTaillePioche() : Integer
            + poserCarte(carte : Carte, cellule : Integer)
            + attaquer(autre : Joueur)
            + ToString() : String

        }

        class Robot extends Joueur{
            +<<Create>> Robot()
            + jouerTour()
            + poserCarteRobot() : Boolean
            + ToString() : String
        }

        Joueur o----> "1" Animal : m_pioche\nm_mainJoueur
        Joueur o--> "1" typeCarte.Carte  : m_plateau
        Partie .> Joueur : <<use>>

    }

    package affichage{
        class Affichage{
            + <<Create>> Affichage()
            + showCarte()
            + placeDeck()
            + pioche()
        }

        Affichage o--> typeCarte.Carte : m_carte
    }
}
@enduml